Updated ebid-lcs-automation project changes